--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "facebook-nodejs-business-sdk": "^23.0.1",
+    "gsap": "^3.12.5",
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "gsap": "^3.12.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
